Add blog articles, lead magnet troll, contact form troll, Brevo integration, Senja testimonials, mobile adjustments

--- a/index.html
+++ b/index.html
@@ -451,15 +451,30 @@
         <div class="testimonial-card reveal">
           <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
           <p class="testimonial-text">
-            "Harry m'a vraiment fait comprendre que la transformation, c'est d'abord dans la tête.
-            En 6 semaines, j'ai perdu 5kg et surtout j'ai retrouvé confiance en moi.
-            Sa méthode est simple mais tellement efficace !"
+            "On travaille ensemble depuis plus de 4 ans maintenant, toujours à l'écoute pour les questions /
+            explications, programme de qualité, j'ai pas mal de soucis de santé et à chaque fois on en discute et on
+            adapte, je recommande !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">C</div>
+            <div class="testimonial-info">
+              <h4>Clemoumou97</h4>
+              <p>4+ ans de suivi</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "J'habite à l'étranger et Harry me suit depuis un peu moins d'un an depuis la France. Son programme
+            d'entraînement en ligne est fantastique et adapté aux besoins de chacun. Les séances sont efficaces !"
           </p>
           <div class="testimonial-author">
             <div class="testimonial-avatar">S</div>
             <div class="testimonial-info">
-              <h4>Sophie M.</h4>
-              <p>-5kg en 6 semaines</p>
+              <h4>Sédi B.</h4>
+              <p>Coaching à distance</p>
             </div>
           </div>
         </div>
@@ -467,31 +482,60 @@
         <div class="testimonial-card reveal">
           <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
           <p class="testimonial-text">
-            "Le suivi 7j/7 change tout. Harry répond toujours rapidement et ajuste mon programme
-            selon mes ressentis. C'est le premier coach qui me comprend vraiment.
-            Mon summer body est enfin une réalité !"
+            "Grâce au coaching d'Harry, j'ai tonifié mon corps en alternant séances de cardio et de renforcement
+            musculaire. Très à l'écoute tout en me poussant au-delà de mes limites. Un coach diplômé très professionnel
+            !"
           </p>
           <div class="testimonial-author">
-            <div class="testimonial-avatar">T</div>
+            <div class="testimonial-avatar">S</div>
             <div class="testimonial-info">
-              <h4>Thomas L.</h4>
-              <p>+8kg de muscle en 3 mois</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="testimonial-card reveal">
-          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
-          <p class="testimonial-text">
-            "J'ai essayé beaucoup de coachs avant Harry. La différence ? Son énergie positive
-            et sa bienveillance. Il a cette chaleur antillaise qui te motive même dans les moments durs.
-            Je recommande à 100% !"
-          </p>
-          <div class="testimonial-author">
-            <div class="testimonial-avatar">M</div>
-            <div class="testimonial-info">
-              <h4>Marie D.</h4>
+              <h4>Stephanie C.</h4>
               <p>Transformation complète</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "J'ai fait appel à Harry dans l'objectif de retrouver mes anciennes performances et gagner en masse
+            musculaire. Ayant testé d'autres accompagnements, j'avais besoin de quelqu'un pour me challenger !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">V</div>
+            <div class="testimonial-info">
+              <h4>Vi V.</h4>
+              <p>+8kg de muscle</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "J'ai décidé de me faire coacher par Harry après les conseils d'un ami. J'étais en plein doute car j'avais
+            passé 10 mois avec un mauvais coach. Ça a tout de suite matché, il a entendu mes envies et mes objectifs !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">A</div>
+            <div class="testimonial-info">
+              <h4>Alex B.</h4>
+              <p>Objectifs atteints</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "Avant de rencontrer Harry Lift, ma quête de la forme idéale ressemblait à un combat sans fin. Mais grâce à
+            son approche ultra personnalisée, Harry a su développer chez moi une discipline de fer !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">P</div>
+            <div class="testimonial-info">
+              <h4>Philippe Bk</h4>
+              <p>Discipline acquise</p>
             </div>
           </div>
         </div>
@@ -873,7 +917,7 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 15 Décembre 2024</span>
-              <a href="#" class="blog-card-read-more">Lire →</a>
+              <a href="blog/nutrition-erreurs.html" class="blog-card-read-more">Lire →</a>
             </div>
           </div>
         </article>
@@ -891,7 +935,7 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 10 Décembre 2024</span>
-              <a href="#" class="blog-card-read-more">Lire →</a>
+              <a href="blog/muscle-2-seances.html" class="blog-card-read-more">Lire →</a>
             </div>
           </div>
         </article>
@@ -909,7 +953,7 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 5 Décembre 2024</span>
-              <a href="#" class="blog-card-read-more">Lire →</a>
+              <a href="blog/mentalite-champion.html" class="blog-card-read-more">Lire →</a>
             </div>
           </div>
         </article>
@@ -925,6 +969,101 @@
   </section>
 
   <!-- Wave Separator -->
+  <div class="wave-separator-ocean">
+    <svg class="animated-wave" viewBox="0 0 1440 100" preserveAspectRatio="none">
+      <path class="wave-path wave-back" d="M0,50 C360,100 540,0 720,50 C900,100 1080,0 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-mid"
+        d="M0,60 C280,20 460,80 640,40 C820,0 1000,60 1180,30 C1360,0 1400,40 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-front"
+        d="M0,70 C200,40 400,90 600,50 C800,10 1000,70 1200,40 C1350,20 1400,50 1440,60 L1440,100 L0,100 Z" />
+    </svg>
+  </div>
+
+  <!-- ========== LEAD MAGNET SECTION (TROLL) ========== -->
+  <section class="section lead-magnet" id="guide">
+    <div class="container">
+      <div class="lead-magnet-wrapper reveal">
+        <div class="lead-magnet-content">
+          <div class="lead-magnet-badge">🎁 GRATUIT</div>
+          <h2>Télécharge mon Guide Gratuit</h2>
+          <h3>"7 Secrets pour un Summer Body en 8 Semaines"</h3>
+          <ul class="lead-magnet-benefits">
+            <li>✅ Les 7 exercices les plus efficaces</li>
+            <li>✅ Plan nutrition simplifié</li>
+            <li>✅ Routine morning du champion</li>
+            <li>✅ Mes erreurs à éviter absolument</li>
+          </ul>
+        </div>
+        <div class="lead-magnet-form">
+          <form id="leadMagnetForm">
+            <div class="form-group">
+              <input type="text" id="leadName" placeholder="Ton prénom" required>
+            </div>
+            <div class="form-group">
+              <input type="email" id="leadEmail" placeholder="Ton email" required>
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg btn-full">
+              📥 Recevoir mon guide gratuit
+            </button>
+            <p class="form-note">🔒 Tes données sont en sécurité, promis !</p>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Lead Magnet Troll Modal -->
+  <div class="troll-modal" id="trollModal">
+    <div class="troll-modal-content">
+      <button class="troll-modal-close" id="trollModalClose">×</button>
+      <div class="troll-emoji">😅</div>
+      <h2>Attends, j'ai mieux pour toi !</h2>
+      <p>
+        Franchement, un PDF c'est bien... mais tu sais quoi serait <strong>vraiment efficace</strong> ?
+      </p>
+      <p>
+        <strong>Un vrai échange avec moi !</strong> 🌴
+      </p>
+      <p>
+        En 30 minutes de bilan gratuit, je peux te donner bien plus que 10 PDFs. Et c'est <strong>100% gratuit, sans
+          engagement</strong>.
+      </p>
+      <p class="troll-name">Alors, <span id="trollUserName">champion</span>, on se parle ?</p>
+      <div class="troll-buttons">
+        <a href="https://calendar.brevo.com/harrylift" class="btn btn-primary btn-lg" target="_blank" rel="noopener">
+          🏖️ OK, je réserve mon bilan !
+        </a>
+        <button class="btn btn-secondary" id="trollInsist">Non, je veux quand même le PDF</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Troll Modal 2 (if they insist) -->
+  <div class="troll-modal" id="trollModal2">
+    <div class="troll-modal-content">
+      <button class="troll-modal-close" id="trollModal2Close">×</button>
+      <div class="troll-emoji">🤷‍♂️</div>
+      <h2>Bon, ok t'as gagné...</h2>
+      <p>
+        Mais sérieusement, le PDF te donnera 20% de ce qu'un appel de 30 min pourrait t'apporter.
+      </p>
+      <p>
+        <strong>Dernière chance :</strong> je t'offre un bilan personnalisé où je réponds à TOUTES tes questions. Pas de
+        vente, juste de la valeur.
+      </p>
+      <div class="troll-buttons">
+        <a href="https://calendar.brevo.com/harrylift" class="btn btn-primary btn-lg" target="_blank" rel="noopener">
+          🌴 Allez, je book le call !
+        </a>
+        <button class="btn btn-secondary" id="trollGiveUp">Je reste sur le PDF (tant pis)</button>
+      </div>
+      <p class="troll-final" id="trollFinal" style="display: none; margin-top: var(--space-6);">
+        📧 Check ta boîte mail (ou tes spams) ! Et si tu changes d'avis, le lien Brevo est toujours là 😉
+      </p>
+    </div>
+  </div>
+
+  <!-- Wave Separator -->
   <div class="wave-separator-ocean wave-separator-sunset">
     <svg class="animated-wave" viewBox="0 0 1440 100" preserveAspectRatio="none">
       <path class="wave-path wave-back" d="M0,50 C360,100 540,0 720,50 C900,100 1080,0 1440,50 L1440,100 L0,100 Z" />
@@ -934,6 +1073,82 @@
         d="M0,70 C200,40 400,90 600,50 C800,10 1000,70 1200,40 C1350,20 1400,50 1440,60 L1440,100 L0,100 Z" />
     </svg>
   </div>
+
+  <!-- ========== CONTACT FORM SECTION ========== -->
+  <section class="section contact-section" id="contact">
+    <div class="container">
+      <div class="section-header reveal">
+        <h2>Une Question ? 💬</h2>
+        <p>N'hésite pas à m'écrire, je réponds personnellement à chaque message</p>
+      </div>
+
+      <div class="contact-wrapper reveal">
+        <div class="contact-info">
+          <h3>Contacte-moi directement</h3>
+          <div class="contact-item">
+            <span class="contact-icon">📱</span>
+            <div>
+              <strong>WhatsApp</strong>
+              <p><a href="https://wa.me/33695308817">+33 6 95 30 88 17</a></p>
+            </div>
+          </div>
+          <div class="contact-item">
+            <span class="contact-icon">📧</span>
+            <div>
+              <strong>Email</strong>
+              <p><a href="mailto:coaching@harrylift.com">coaching@harrylift.com</a></p>
+            </div>
+          </div>
+          <div class="contact-item">
+            <span class="contact-icon">📍</span>
+            <div>
+              <strong>Localisation</strong>
+              <p>Lyon et alentours</p>
+            </div>
+          </div>
+          <div class="contact-item">
+            <span class="contact-icon">📸</span>
+            <div>
+              <strong>Instagram</strong>
+              <p><a href="https://instagram.com/harrylift" target="_blank" rel="noopener">@harrylift</a></p>
+            </div>
+          </div>
+        </div>
+
+        <form class="contact-form" id="contactForm">
+          <div class="form-row">
+            <div class="form-group">
+              <label for="contactName">Prénom *</label>
+              <input type="text" id="contactName" name="name" placeholder="Ton prénom" required>
+            </div>
+            <div class="form-group">
+              <label for="contactEmail">Email *</label>
+              <input type="email" id="contactEmail" name="email" placeholder="ton@email.com" required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="contactSubject">Sujet</label>
+            <select id="contactSubject" name="subject">
+              <option value="">Choisis un sujet</option>
+              <option value="coaching">Question sur le coaching</option>
+              <option value="pricing">Question sur les tarifs</option>
+              <option value="program">Question sur les programmes</option>
+              <option value="other">Autre</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="contactMessage">Message *</label>
+            <textarea id="contactMessage" name="message" rows="5" placeholder="Ton message..." required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-lg">
+            ✉️ Envoyer mon message
+          </button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- Wave Separator Final -->
 
   <!-- ========== CTA SECTION ========== -->
   <section class="section cta-section" id="bilan">
@@ -946,7 +1161,7 @@
         </p>
 
         <div class="cta-buttons">
-          <a href="https://calendly.com/harrylift" class="btn btn-primary btn-lg" target="_blank" rel="noopener">
+          <a href="https://calendar.brevo.com/harrylift" class="btn btn-primary btn-lg" target="_blank" rel="noopener">
             🏖️ Réserver mon Bilan Gratuit
           </a>
           <a href="https://wa.me/33695308817" class="btn btn-secondary btn-lg" target="_blank" rel="noopener">
