Add favicon, complete SEO optimization for 'coach sportif Lyon' with Schema.org LocalBusiness

--- a/index.html
+++ b/index.html
@@ -4,42 +4,162 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="🌴 Ton Summer Body en 2-6 semaines avec Harry, coach sportif antillais à Lyon. Méthode simple, suivi personnalisé et résultats garantis. Bilan gratuit !">
-  <meta name="keywords"
-    content="coach sportif Lyon, summer body, transformation physique, coaching personnalisé, perte de poids, musculation, fitness Lyon, coach antillais">
-  <meta name="author" content="Harry Lift">
-  <meta name="robots" content="index, follow">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Harry Lift - Ton Summer Body 🏖️ en 2-6 semaines">
+  <!-- SEO Optimisé Coach Sportif Lyon -->
+  <meta name="description"
+    content="Coach sportif à Lyon 🌴 Harry Lift t'accompagne vers ton Summer Body en 2-6 semaines. Coaching personnalisé, suivi 7j/7, méthode antillaise unique. 500+ transformations réussies. Bilan GRATUIT !">
+  <meta name="keywords"
+    content="coach sportif Lyon, coach personnel Lyon, personal trainer Lyon, coaching sportif Lyon, musculation Lyon, perte de poids Lyon, remise en forme Lyon, coach fitness Lyon, préparateur physique Lyon, entraineur sportif Lyon, coach minceur Lyon, transformation physique Lyon, summer body, Harry Lift">
+  <meta name="author" content="Harry Lift - Coach Sportif Lyon">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
+
+  <!-- Geo Tags pour Lyon -->
+  <meta name="geo.region" content="FR-ARA">
+  <meta name="geo.placename" content="Lyon">
+  <meta name="geo.position" content="45.764043;4.835659">
+  <meta name="ICBM" content="45.764043, 4.835659">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.harrylift.com/">
+
+  <!-- Open Graph optimisé -->
+  <meta property="og:title" content="Coach Sportif Lyon | Harry Lift - Ton Summer Body 🏖️ en 2-6 Semaines">
   <meta property="og:description"
-    content="La méthode du soleil antillais : simple, efficace, et ensoleillée comme ton avenir 🌴 Coach sportif à Lyon.">
+    content="Coaching sportif personnalisé à Lyon avec Harry, coach antillais. Méthode unique, suivi 7j/7, 500+ transformations. Bilan gratuit !">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.harrylift.com">
   <meta property="og:locale" content="fr_FR">
+  <meta property="og:site_name" content="Harry Lift - Coach Sportif Lyon">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Harry Lift - Ton Summer Body 🏖️ en 2-6 semaines">
+  <meta name="twitter:title" content="Coach Sportif Lyon | Harry Lift - Summer Body 🏖️">
   <meta name="twitter:description"
-    content="La méthode du soleil antillais : simple, efficace, et ensoleillée comme ton avenir 🌴">
+    content="Coaching sportif personnalisé à Lyon. Méthode antillaise unique, 500+ transformations. Bilan gratuit !">
+  <meta name="twitter:site" content="@harrylift">
 
   <!-- Theme Color -->
-  <meta name="theme-color" content="#40E0D0">
+  <meta name="theme-color" content="#1E9B8F">
+  <meta name="msapplication-TileColor" content="#1E9B8F">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="apple-touch-icon" href="favicon.svg">
 
   <title>Coach Sportif Lyon | Harry Lift - Ton Summer Body 🏖️ en 2-6 Semaines</title>
 
-  <!-- Google Fonts -->
+  <!-- Preconnect pour performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://calendar.brevo.com">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animations.css">
+
+  <!-- Schema.org LocalBusiness pour SEO Local -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "@id": "https://www.harrylift.com",
+    "name": "Harry Lift - Coach Sportif Lyon",
+    "description": "Coach sportif personnel à Lyon. Coaching personnalisé, transformation physique, perte de poids, musculation. Méthode antillaise unique avec suivi 7j/7.",
+    "url": "https://www.harrylift.com",
+    "telephone": "+33695308817",
+    "email": "coaching@harrylift.com",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Lyon",
+      "addressRegion": "Auvergne-Rhône-Alpes",
+      "addressCountry": "FR"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 45.764043,
+      "longitude": 4.835659
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Lyon"
+    },
+    "priceRange": "€€",
+    "openingHours": "Mo-Su 07:00-21:00",
+    "sameAs": [
+      "https://instagram.com/harrylift",
+      "https://www.tiktok.com/@harrylift"
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5",
+      "reviewCount": "500",
+      "bestRating": "5",
+      "worstRating": "1"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Services de coaching sportif",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Séance de Coaching Personnel",
+            "description": "Séance individuelle de coaching sportif à Lyon"
+          },
+          "price": "60",
+          "priceCurrency": "EUR"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Suivi Mensuel",
+            "description": "Programme personnalisé avec suivi 7j/7"
+          },
+          "price": "97",
+          "priceCurrency": "EUR"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Formule Complète",
+            "description": "Coaching + suivi + nutrition personnalisée"
+          },
+          "price": "350",
+          "priceCurrency": "EUR"
+        }
+      ]
+    }
+  }
+  </script>
+
+  <!-- Schema.org Person pour Harry -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Harry Lift",
+    "jobTitle": "Coach Sportif",
+    "description": "Coach sportif personnel à Lyon, spécialisé en transformation physique et summer body",
+    "url": "https://www.harrylift.com",
+    "sameAs": [
+      "https://instagram.com/harrylift"
+    ],
+    "worksFor": {
+      "@type": "LocalBusiness",
+      "name": "Harry Lift - Coach Sportif Lyon"
+    }
+  }
+  </script>
 </head>
+
 
 <body>
   <!-- Sand Click Effect Container -->
