Add 10 premium improvements: preloader, custom cursor, scroll progress, scroll-to-top, confetti, 3D tilt, magnetic buttons, text reveal, glassmorphism, page transitions

--- a/index.html
+++ b/index.html
@@ -162,6 +162,34 @@
 
 
 <body>
+  <!-- Preloader Tropical -->
+  <div class="preloader" id="preloader">
+    <div class="preloader-content">
+      <div class="preloader-palm">🌴</div>
+      <div class="preloader-text">Harry Lift</div>
+      <div class="preloader-bar">
+        <div class="preloader-progress"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Custom Cursor -->
+  <div class="custom-cursor" id="customCursor">
+    <div class="cursor-dot"></div>
+    <div class="cursor-ring"></div>
+  </div>
+
+  <!-- Scroll Progress Bar -->
+  <div class="scroll-progress" id="scrollProgress"></div>
+
+  <!-- Scroll to Top Button -->
+  <button class="scroll-to-top" id="scrollToTop" aria-label="Retour en haut">
+    <span>🥥</span>
+  </button>
+
+  <!-- Confetti Container -->
+  <div class="confetti-container" id="confettiContainer"></div>
+
   <!-- Sand Click Effect Container -->
   <div id="sandEffectContainer"></div>
 
