Major cleanup: remove cursor/magnetic/tilt conflicts, add shake buttons, pill animation, accessibility (focus, skip-link, reduced-motion), sitemap, robots.txt, preloader 1s

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
 
 
 <body>
+  <!-- Skip Link for Accessibility -->
+  <a href="#hero" class="skip-link">Aller au contenu principal</a>
+
   <!-- Preloader Tropical -->
   <div class="preloader" id="preloader">
     <div class="preloader-content">
@@ -171,12 +174,6 @@
         <div class="preloader-progress"></div>
       </div>
     </div>
-  </div>
-
-  <!-- Custom Cursor -->
-  <div class="custom-cursor" id="customCursor">
-    <div class="cursor-dot"></div>
-    <div class="cursor-ring"></div>
   </div>
 
   <!-- Scroll Progress Bar -->
