Major UX cleanup: vertical mobile navbar, remove shine/pulse animations, simple hover effects, clickable blog cards, hero badge hover, simplified method cards

--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
 
       <div class="blog-grid">
         <!-- Blog Article 1 -->
-        <article class="blog-card reveal">
+        <article class="blog-card reveal" data-href="blog/nutrition-erreurs.html">
           <div class="blog-card-image">
             🥗
             <span class="blog-card-category">Nutrition</span>
@@ -1062,13 +1062,13 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 15 Décembre 2024</span>
-              <a href="blog/nutrition-erreurs.html" class="blog-card-read-more">Lire →</a>
+              <span class="blog-card-read-more">Lire →</span>
             </div>
           </div>
         </article>
 
         <!-- Blog Article 2 -->
-        <article class="blog-card reveal">
+        <article class="blog-card reveal" data-href="blog/muscle-2-seances.html">
           <div class="blog-card-image">
             💪
             <span class="blog-card-category">Entraînement</span>
@@ -1080,13 +1080,13 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 10 Décembre 2024</span>
-              <a href="blog/muscle-2-seances.html" class="blog-card-read-more">Lire →</a>
+              <span class="blog-card-read-more">Lire →</span>
             </div>
           </div>
         </article>
 
         <!-- Blog Article 3 -->
-        <article class="blog-card reveal">
+        <article class="blog-card reveal" data-href="blog/mentalite-champion.html">
           <div class="blog-card-image">
             🧠
             <span class="blog-card-category">Motivation</span>
@@ -1098,7 +1098,7 @@
             </p>
             <div class="blog-card-meta">
               <span class="blog-card-date">📅 5 Décembre 2024</span>
-              <a href="blog/mentalite-champion.html" class="blog-card-read-more">Lire →</a>
+              <span class="blog-card-read-more">Lire →</span>
             </div>
           </div>
         </article>
