Refactor CSS into modular architecture

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/animations.css">
+  <!-- Stylesheets (modular) -->
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Schema.org LocalBusiness pour SEO Local -->
   <script type="application/ld+json">
@@ -373,7 +372,7 @@
       <!-- Section CTA -->
       <div class="section-cta reveal">
         <a href="#bilan" class="btn btn-primary btn-lg">
-          🌴 Je veux ma transformation
+          🌴 Je veux commencer
         </a>
       </div>
     </div>
